contrast error fixed

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -224,3 +224,9 @@ footer{
     gap: 0.25rem;
     flex-wrap: wrap; 
 }
+
+.external-link{
+    text-decoration: none;
+    color: var(--primary-color);
+    font-weight: 700;
+}
